# micropdf

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  FFI_COMPATIBILITY_AUDIT.md  FPDF_EXTENSION_OPPORTUNITIES.md  FUZZING.md  HEADER_GENERATION_SUMMARY.md  MUPDF_COMPATIBILITY.md  NODEJS_API_AUDIT.md  PYPDF_FEATURE_COMPARISON.md  README.md  TODO.md  commitlint.config.js  package.json  pnpm-lock.yaml  test-merge-direct.js  test-merge-enhanced.js  test-merge.js
.github/: LFS-SETUP.md
.husky/: commit-msg  post-checkout  post-commit  post-merge  pre-commit  pre-push
benchmarks/: compare_overhead.sh  cross_language_overhead.go  cross_language_overhead.py  cross_language_overhead.rs  cross_language_overhead.ts
docker/: Dockerfile.deb  Dockerfile.rpm
docs/: FFI_COMPATIBILITY_AUDIT.md  FPDF_EXTENSION_OPPORTUNITIES.md  PDFCPU_EXTENSION_OPPORTUNITIES.md  PYPDF_FEATURE_COMPARISON.md  REPORTLAB_EXTENSION_OPPORTUNITIES.md  index.html
go-micropdf/: ARCHITECTURE.md  CONTRIBUTING.md  EASY_API.md  LICENSE  README.md  benchmark_test.go  buffer.go  buffer_test.go  colorspace_cgo.go  colorspace_mock.go  colorspace_test.go  context.go  context_test.go  cookie_cgo.go  cookie_mock.go  cookie_test.go  coverage_boost_test.go  device.go  doc.go  document.go  document_test.go  enhanced.go  enhanced_test.go  errors.go  (+29 more)
nanopdf-rs/fuzz/: Cargo.toml  README.md
nanopdf-rs/fuzz/fuzz_targets/: fuzz_annotations.rs  fuzz_buffer.rs  fuzz_filters.rs  fuzz_fonts.rs  fuzz_page_render.rs  fuzz_pdf_objects.rs  fuzz_pdf_parse.rs  fuzz_stream.rs  fuzz_xref.rs
(+1032 files in other folders)
